--- a/app/assets/stylesheets/umbra.css.scss
+++ b/app/assets/stylesheets/umbra.css.scss
@@ -109,6 +109,10 @@ $dark-background-color: #102826;
   height: 180px;
 }
 
+#startOverLink {
+  color: #1f5481;
+}
+
 // Subjects
 ol.subjects {
   list-style: none;
@@ -118,6 +122,7 @@ ol.subjects {
 
     a.label.label-default {
       font-weight: normal;
+      background-color: #666666;
     }
   }
 }
@@ -337,6 +342,7 @@ body.blacklight-pages-home {
         float: right;
         @include border-left-radius(3px);
         width: 100% !important;
+        color: #555;
       }
     }
   }
